[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scripts/Upgrades.gd" type="Script" id=1]
[ext_resource path="res://src/res/Theme.tres" type="Theme" id=2]

[node name="this scene is unused btw" type="Control"]
anchor_right = 0.33
anchor_bottom = 0.33
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="go to the ui scene" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="UpgradesTextLabel" type="Label" parent="go to the ui scene"]
margin_right = 167.0
margin_bottom = 22.0
text = "Upgrades:"

[node name="Damage" type="HBoxContainer" parent="go to the ui scene"]
margin_top = 26.0
margin_right = 167.0
margin_bottom = 54.0

[node name="DamageUpgrade" type="Button" parent="go to the ui scene/Damage"]
margin_right = 75.0
margin_bottom = 28.0
text = "Damage"

[node name="Level" type="Label" parent="go to the ui scene/Damage"]
margin_left = 79.0
margin_top = 3.0
margin_right = 116.0
margin_bottom = 25.0
text = "Lv. 0"

[node name="Price" type="Label" parent="go to the ui scene/Damage"]
margin_left = 120.0
margin_top = 3.0
margin_right = 148.0
margin_bottom = 25.0
text = " $10"

[node name="Pierce" type="HBoxContainer" parent="go to the ui scene"]
margin_top = 58.0
margin_right = 167.0
margin_bottom = 86.0

[node name="PierceUpgrade" type="Button" parent="go to the ui scene/Pierce"]
margin_right = 58.0
margin_bottom = 28.0
text = "Pierce"

[node name="Level" type="Label" parent="go to the ui scene/Pierce"]
margin_left = 62.0
margin_top = 3.0
margin_right = 99.0
margin_bottom = 25.0
text = "Lv. 0"

[node name="Price" type="Label" parent="go to the ui scene/Pierce"]
margin_left = 103.0
margin_top = 3.0
margin_right = 131.0
margin_bottom = 25.0
text = " $10"

[node name="HP" type="HBoxContainer" parent="go to the ui scene"]
margin_top = 90.0
margin_right = 167.0
margin_bottom = 118.0

[node name="HPUpgrade" type="Button" parent="go to the ui scene/HP"]
margin_right = 69.0
margin_bottom = 28.0
text = "Max HP"

[node name="Level" type="Label" parent="go to the ui scene/HP"]
margin_left = 73.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 25.0
text = "Lv. 0"

[node name="Price" type="Label" parent="go to the ui scene/HP"]
margin_left = 114.0
margin_top = 3.0
margin_right = 142.0
margin_bottom = 25.0
text = " $10"

[node name="dfghsdfgihjdsfg" type="Label" parent="go to the ui scene"]
margin_top = 122.0
margin_right = 167.0
margin_bottom = 144.0
text = "Enter to call next round"

[connection signal="button_down" from="go to the ui scene/Damage/DamageUpgrade" to="." method="_on_DamageUpgrade_button_down"]
[connection signal="button_down" from="go to the ui scene/Pierce/PierceUpgrade" to="." method="_on_PierceUpgrade_button_down"]
[connection signal="button_down" from="go to the ui scene/HP/HPUpgrade" to="." method="_on_HPUpgrade_button_down"]
